--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarGeek</title>
+    <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+<div>
+    <img src="img/logo imagem.png">
+    <nav>
+        <ul class="menu">
+            <li> <a href=" # "> filme </a> </li>
+            <li> <a href=" # "> animes </a> </li>
+            <li> <a href=" # "> series </a> </li>
+            <li> <a href="#"> artistas </a></li>
+            <li> <a href=" # "> jogos </a> </li>
+        </ul>
+    </nav>
+</div>
+       
+
+    </header>
 </body>
 </html>
