--- a/cadastro.html
+++ b/cadastro.html
@@ -34,9 +34,10 @@
                 <div>
                     <input class="input" type="text" placeholder="CPF">
                 </div>  
-                <div>
-                    <input class="botao" type="submit" value="cadastrar">
+                <div class="botao2">
+                    <a href="index.html" class="botao"> Cadastrar </a>
                 </div>
+                
             </div>
         </div>
     </form>
