--- a/jogos.html
+++ b/jogos.html
@@ -25,26 +25,24 @@
     <div class="jogos">
         <h1> Jogos populares </h1>
        <div class="jogos2">
-        <img src="img/jogos 1.png" >
-        <img src="img/jogos 2.webp" >
-        <img src="img/jogos 3.jpg" >
-        <img src="img/jogos 4.webp" >
-        <img src="img/jogos 5.jpg" >
-        <img src="img/jogos 6.jpg" >
-        <img src="img/jogos 7.jpg" >
-        <img src="img/jogos 8.jpg" >
-        <img src="img/jogos 9.jpg" >
-        <img src="img/jogos 10.webp" >
-        <img src="img/jogos 11.jpg" >
-        <img src="img/jogos 12.jpg" >
-        <img src="img/jogos 13.jpg" >
-        <img src="img/jogos 14.webp" >
+        <img src="img/jogos 1.png" class="jogos1 hover1">
+        <img src="img/jogos 4.webp" class="jogos3 hover3">
+        <img src="img/jogos 5.jpg" class="jogos4 hover4">
+        <img src="img/jogos 6.jpg" class="jogos5 hover5">
+        <img src="img/jogos 7.jpg" class="jogos6 hover6">
+        <img src="img/jogos 8.jpg" class="jogos7 hover7">
+        <img src="img/jogos 9.jpg" class="jogos8 hover8">
+        <img src="img/jogos 10.webp" class="jogos9 hover9">
+        <img src="img/jogos 11.jpg" class="jogos10 hover10">
+        <img src="img/jogos 12.jpg" class="jogos11 hover11">
+        <img src="img/jogos 13.jpg" class="jogos12 hover12">
+        <img src="img/jogos 14.webp" class="jogos13 hover13">
        </div>
    </div>
    <div class="jogos">
     <h1> Jogos infantis </h1>
    <div class="jogos2">
-    <img src="img/pou 1.webp" >
+    <img src="img/pou 1.webp"  >
     <img src="img/jogos 2.webp" >
     <img src="img/jogos 3.jpg" >
     <img src="img/jogos 4.webp" >
@@ -60,7 +58,9 @@
     <img src="img/careca 14.jpg" >
    </div>
 </div>
-
+<div class="desuaopiniao">
+    <a  href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
+</div>
 
 
 
