--- a/series.html
+++ b/series.html
@@ -25,20 +25,19 @@
     <div class="series">
         <h1> Serie </h1>
        <div class="series2">
-           <img src="img/serie 1.avif">
-           <img src="img/serie 2.webp">
-           <img src="img/serie 3.jpg"> 
-           <img src="img/serie 4.jpg">
-           <img src="img/serie 5.jpg">
-           <img src="img/serie 6.jpg">
-           <img src="img/serie 7.jpg">
-           <img src="img/serie 8.jpg">
-           <img src="img/serie 9.jpg">
-           <img src="img/serie 10.jpg">
-           <img src="img/serie 11.jpg">
-           <img src="img/serie 12.jpe">
-           <img src="img/serie 12.webp">
-           <img src="img/serie 13.jpg">
+        <img src="img/serie 1.avif"class="series1 hover3">
+        <img src="img/serie 3.jpg"class="series3 hover1"> 
+        <img src="img/serie 4.jpg"class="series4 hover4">
+        <img src="img/serie 5.jpg"class="series5 hover5">
+        <img src="img/serie 6.jpg"class="series6 hover6">
+        <img src="img/serie 7.jpg"class="series7 hover7">
+        <img src="img/serie 8.jpg"class="series8 hover8">
+        <img src="img/serie 9.jpg" class="series9 hover9">
+        <img src="img/serie 10.jpg"class="series10 hover10">
+        <img src="img/serie 11.jpg"class="series11 hover11">
+        <img src="img/serie 12.jpe" class="anime4 " >
+        <img src="img/serie 12.webp" class="anime6 ">
+        <img src="img/serie 13.jpg"class="series13 hover13 ">
        </div>
    </div>
    <div class="series">
@@ -61,7 +60,9 @@
    </div>
 </div>
 
-
+<div class="desuaopiniao">
+    <a  href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
+</div>
 
 
 
