--- a/animes.html
+++ b/animes.html
@@ -25,26 +25,26 @@
     <div class="animes">
         <h1> Animes </h1>
         <div class="animes2">
-            <img src="img/anime.jpg">
-            <img src="img/anime2.jpg">
-            <img src="img/anime 3.jpg">
-            <img src="img/anime 4.jpg">
-            <img src="img/anime 5.jpg">
-            <img src="img/anime 6.jpg">
-            <img src="img/anime 7.jpg">
-            <img src="img/anime 8.jpg">
-            <img src="img/anime 9.jpg">
-            <img src="img/anime 10.jpg">
-            <img src="img/anime 11.jpg">
-            <img src="img/anime 12.jpg">
-            <img src="img/anime 13.jpg">
-            <img src="img/anime 14.jpg">
-            <img src="img/anime 15.jpg">
-            <img src="img/anime 16.jpg">
-            <img src="img/anime 17.jpg">
-            <img src="img/anime 18.jpg">
-            <img src="img/anime 19.jpg">
-            <img src="img/anime 20.jpg">
+            <img src="img/anime.jpg" class="anime1">
+            <img src="img/anime2.jpg" class="anime2">
+            <img src="img/anime 3.jpg" class="anime3">
+            <img src="img/anime 4.jpg" class="anime4">
+            <img src="img/anime 5.jpg"class="anime5">
+            <img src="img/anime 6.jpg"class="anime6">
+            <img src="img/anime 7.jpg"class="anime7">
+            <img src="img/anime 8.jpg"class="anime8">
+            <img src="img/anime 9.jpg"class="anime9">
+            <img src="img/anime 10.jpg"class="anime10">
+            <img src="img/anime 11.jpg"class="anime11">
+            <img src="img/anime 12.jpg"class="anime12">
+            <img src="img/anime 13.jpg"class="anime13">
+            <img src="img/anime 14.jpg"class="anime14">
+            <img src="img/anime 15.jpg"class="anime15">
+            <img src="img/anime 16.jpg"class="anime16">
+            <img src="img/anime 17.jpg"class="anime17">
+            <img src="img/anime 18.jpg"class="anime18">
+            <img src="img/anime 19.jpg"class="anime19">
+            <img src="img/anime 20.jpg"class="anime10">
         </div>
         </div>
         <div class="animes">
@@ -71,6 +71,9 @@
                 <img src="img/anime 19.jpg">
                 <img src="img/anime 20.jpg">
             </div>
+            </div>
+            <div class="desuaopiniao">
+                <a  href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
             </div>
 
 
