--- a/inicio.html
+++ b/inicio.html
@@ -8,30 +8,31 @@
     <title>StarGeek</title>
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="css/inicio.css">
-    
+
 </head>
 
 <body>
+    <main>
+        <div class="Container">
+            <img src="img/inicio imagem agrupda.png">
+        </div>
 
-    <div class="Container">
-        <img src="img/inicio imagem agrupda.png">
-    </div>
-    </a>
-    <div class="rolagem2">
-        <h1> Seu lugar para filmes </h1>
-        <div class="div-1">
+        <div class="rolagem2">
+            <h1> Seu lugar para filmes </h1>
             <img src="img/gif-animados-do-gato-de-botas-24.gif" class="gif-animado">
-        </div>
-        <h1> Jogos </h1>
-        <div class="div-2">
+            <h1> Jogos </h1>
             <img src="img/kratos-heart.gif">
-        </div>
-        <h1> E muito mais...</h1>
-        <div class="div-3">
+            <h1> E muito mais...</h1>
             <img src="img/download.jfif" class="img">
+            <br>
+            <br>
+            <br>
+            <a href="login.html" class="botao1"> Continuar </a>
         </div>
-        <a href="login.html" class="botao1"> Continuar </a>
-    </div>
+    </main>
+
+
+
 </body>
 
 </html>
