--- a/pesquisar.html
+++ b/pesquisar.html
@@ -25,26 +25,26 @@
     <div class="animes">
         <h1> Animes de ações </h1>
         <div class="animes2">
-            <img src="img/anime.jpg">
-            <img src="img/anime2.jpg">
-            <img src="img/anime 3.jpg">
-            <img src="img/anime 4.jpg">
-            <img src="img/anime 5.jpg">
-            <img src="img/anime 6.jpg">
-            <img src="img/anime 7.jpg">
-            <img src="img/anime 8.jpg">
-            <img src="img/anime 9.jpg">
-            <img src="img/anime 10.jpg">
-            <img src="img/anime 11.jpg">
-            <img src="img/anime 12.jpg">
-            <img src="img/anime 13.jpg">
-            <img src="img/anime 14.jpg">
-            <img src="img/anime 15.jpg">
-            <img src="img/anime 16.jpg">
-            <img src="img/anime 17.jpg">
-            <img src="img/anime 18.jpg">
-            <img src="img/anime 19.jpg">
-            <img src="img/anime 20.jpg">
+            <img src="img/anime.jpg" class="anime1">
+            <img src="img/anime2.jpg" class="anime2">
+            <img src="img/anime 3.jpg" class="anime3">
+            <img src="img/anime 4.jpg" class="anime4">
+            <img src="img/anime 5.jpg"class="anime5">
+            <img src="img/anime 6.jpg"class="anime6">
+            <img src="img/anime 7.jpg"class="anime7">
+            <img src="img/anime 8.jpg"class="anime8">
+            <img src="img/anime 9.jpg"class="anime9">
+            <img src="img/anime 10.jpg"class="anime10">
+            <img src="img/anime 11.jpg"class="anime11">
+            <img src="img/anime 12.jpg"class="anime12">
+            <img src="img/anime 13.jpg"class="anime13">
+            <img src="img/anime 14.jpg"class="anime14">
+            <img src="img/anime 15.jpg"class="anime15">
+            <img src="img/anime 16.jpg"class="anime16">
+            <img src="img/anime 17.jpg"class="anime17">
+            <img src="img/anime 18.jpg"class="anime18">
+            <img src="img/anime 19.jpg"class="anime19">
+            <img src="img/anime 20.jpg"class="anime10">
         </div>
         </div>
         <div class="jogos">
@@ -69,47 +69,48 @@
        <div class="filmes">
         <h1> Filmes divertidos </h1>
        <div class="filmes2">
-           <img src="img/99d475bf57df5ff9c70b0207d64ed6c38b4c766003b2ec73490595c78ac97eb5._RI_V_TTW_.jpg">
-           <img src="img/Carros_pôster.jpg">
-           <img src="img/abelha movie.jpg">
-           <img src="img/vida de inseito.webp">
-           <img src="img/sherek.jpg">
-           <img src="img/madagascar.webp">
-           <img src="img/kung fu panda.webp">
+           <img src="img/99d475bf57df5ff9c70b0207d64ed6c38b4c766003b2ec73490595c78ac97eb5._RI_V_TTW_.jpg" class="filme1 hover1">
+           <img src="img/Carros_pôster.jpg"  class="filme2">
+           <img src="img/abelha movie.jpg" class="filme3">
+           <img src="img/vida de inseito.webp" class="filme4">
+           <img src="img/sherek.jpg" class="filme5">
+           <img src="img/madagascar.webp" class="filme6">
+           <img src="img/kung fu panda.webp" class="filme7">
            <img src="img/seefood.jpg">
-           <img src="img/blog-rango-poster.jpg">
-           <img src="img/como treinar seu dragao.jfif">
-           <img src="img/novos-filmes-que-eu-mal-posso-esperar-para-ver-esse-ano-avatar-the-way-of-the-water-20220908180112.webp">
-           <img src="img/terrifier.jpg">
-           <img src="img/shazam-furia.jpg">
-           <img src="img/john-wick-4-baba-yaga.jpg">
-           <img src="img/panici6.jpg">
-           <img src="img/11029_medio.jpg">
-           <img src="img/14794_medio.jpg mario bross.jpg">
-           <img src="img/images.jfif fvg.jfif">
-           <img src="img/images.jfif coringa.jfif">
-           <img src="img/o-grande-mauricinho-filme-2023-capa-693x1024.jpg">
+           <img src="img/blog-rango-poster.jpg" class="filme9">
+           <img src="img/como treinar seu dragao.jfif" class="filme10">
+           <img src="img/novos-filmes-que-eu-mal-posso-esperar-para-ver-esse-ano-avatar-the-way-of-the-water-20220908180112.webp" class="filme11">
+           <img src="img/terrifier.jpg" class="filme12">
+           <img src="img/shazam-furia.jpg" class="filme13">
+           <img src="img/john-wick-4-baba-yaga.jpg" class="filme14">
+           <img src="img/panici6.jpg" class="filme15">
+           <img src="img/11029_medio.jpg" class="filme16">
+           <img src="img/14794_medio.jpg mario bross.jpg" class="filme17">
+           <img src="img/images.jfif fvg.jfif" class="filme18">
+           <img src="img/images.jfif coringa.jfif" class="filme19">
+           <img src="img/o-grande-mauricinho-filme-2023-capa-693x1024.jpg" >
        </div>
    </div>
-   <div class="series">
-    <h1> Series empolgantes  </h1>
-   <div class="series2">
-       <img src="img/serie 1.avif">
-       <img src="img/serie 2.webp">
-       <img src="img/serie 3.jpg"> 
-       <img src="img/serie 4.jpg">
-       <img src="img/serie 5.jpg">
-       <img src="img/serie 6.jpg">
-       <img src="img/serie 7.jpg">
-       <img src="img/serie 8.jpg">
-       <img src="img/serie 9.jpg">
-       <img src="img/serie 10.jpg">
-       <img src="img/serie 11.jpg">
-       <img src="img/serie 12.jpe">
-       <img src="img/serie 12.webp">
-       <img src="img/serie 13.jpg">
-   </div>
-</div>
+        <h1 class="h11"> Series empolgantes  </h1>
+        <div class="series2">
+            <img src="img/serie 1.avif"class="series1 hover3">
+            <img src="img/serie 2.webp"class="series2 hover2">
+            <img src="img/serie 3.jpg"class="series3 hover1"> 
+            <img src="img/serie 4.jpg"class="series4 hover4">
+            <img src="img/serie 5.jpg"class="series5 hover5">
+            <img src="img/serie 6.jpg"class="series6 hover6">
+            <img src="img/serie 7.jpg"class="series7 hover7">
+            <img src="img/serie 8.jpg"class="series8 hover8">
+            <img src="img/serie 9.jpg" class="series9 hover9">
+            <img src="img/serie 10.jpg"class="series10 hover10">
+            <img src="img/serie 11.jpg"class="series11 hover11">
+            <img src="img/serie 12.jpe" class="anime4 " >
+            <img src="img/serie 12.webp" class="anime6 ">
+            <img src="img/serie 13.jpg"class="series13 hover13 ">
+        </div>
+        <div class="desuaopiniao">
+            <a  href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
+        </div>
 
 
 
