--- a/pesquisar.html
+++ b/pesquisar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/pesquisar.css">
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
 </head>
+
 <body>
     <header class="cabecalho">
         <img src="img/logo imagem.png">
@@ -29,88 +31,88 @@
             <img src="img/anime2.jpg" class="anime2">
             <img src="img/anime 3.jpg" class="anime3">
             <img src="img/anime 4.jpg" class="anime4">
-            <img src="img/anime 5.jpg"class="anime5">
-            <img src="img/anime 6.jpg"class="anime6">
-            <img src="img/anime 7.jpg"class="anime7">
-            <img src="img/anime 8.jpg"class="anime8">
-            <img src="img/anime 9.jpg"class="anime9">
-            <img src="img/anime 10.jpg"class="anime10">
-            <img src="img/anime 11.jpg"class="anime11">
-            <img src="img/anime 12.jpg"class="anime12">
-            <img src="img/anime 13.jpg"class="anime13">
-            <img src="img/anime 14.jpg"class="anime14">
-            <img src="img/anime 15.jpg"class="anime15">
-            <img src="img/anime 16.jpg"class="anime16">
-            <img src="img/anime 17.jpg"class="anime17">
-            <img src="img/anime 18.jpg"class="anime18">
-            <img src="img/anime 19.jpg"class="anime19">
-            <img src="img/anime 20.jpg"class="anime10">
+            <img src="img/anime 5.jpg" class="anime5">
+            <img src="img/anime 6.jpg" class="anime6">
+            <img src="img/anime 7.jpg" class="anime7">
+            <img src="img/anime 8.jpg" class="anime8">
+            <img src="img/anime 9.jpg" class="anime9">
+            <img src="img/anime 10.jpg" class="anime10">
+            <img src="img/anime 11.jpg" class="anime11">
+            <img src="img/anime 12.jpg" class="anime12">
+            <img src="img/anime 13.jpg" class="anime13">
+            <img src="img/anime 14.jpg" class="anime14">
+            <img src="img/anime 15.jpg" class="anime15">
+            <img src="img/anime 16.jpg" class="anime16">
+            <img src="img/anime 17.jpg" class="anime17">
+            <img src="img/anime 18.jpg" class="anime18">
+            <img src="img/anime 19.jpg" class="anime19">
+            <img src="img/anime 20.jpg" class="anime10">
         </div>
+    </div>
+    <div class="jogos">
+        <h1> Jogos para passar o tempo </h1>
+        <div class="jogos2">
+            <img src="img/jogos 1.png" class="jogos1 hover1">
+            <img src="img/jogos 4.webp" class="jogos3 hover3">
+            <img src="img/jogos 5.jpg" class="jogos4 hover4">
+            <img src="img/jogos 6.jpg" class="jogos5 hover5">
+            <img src="img/jogos 7.jpg" class="jogos6 hover6">
+            <img src="img/jogos 8.jpg" class="jogos7 hover7">
+            <img src="img/jogos 9.jpg" class="jogos8 hover8">
+            <img src="img/jogos 10.webp" class="jogos9 hover9">
+            <img src="img/jogos 11.jpg" class="jogos10 hover10">
+            <img src="img/jogos 12.jpg" class="jogos11 hover11">
+            <img src="img/jogos 13.jpg" class="jogos12 hover12">
+            <img src="img/jogos 14.webp" class="jogos13 hover13">
         </div>
-        <div class="jogos">
-            <h1> Jogos para passar o tempo </h1>
-           <div class="jogos2">
-            <img src="img/jogos 1.png" >
-            <img src="img/jogos 2.webp" >
-            <img src="img/jogos 3.jpg" >
-            <img src="img/jogos 4.webp" >
-            <img src="img/jogos 5.jpg" >
-            <img src="img/jogos 6.jpg" >
-            <img src="img/jogos 7.jpg" >
-            <img src="img/jogos 8.jpg" >
-            <img src="img/jogos 9.jpg" >
-            <img src="img/jogos 10.webp" >
-            <img src="img/jogos 11.jpg" >
-            <img src="img/jogos 12.jpg" >
-            <img src="img/jogos 13.jpg" >
-            <img src="img/jogos 14.webp" >
-           </div>
-       </div>
-       <div class="filmes">
+    </div>
+    <div class="filmes">
         <h1> Filmes divertidos </h1>
-       <div class="filmes2">
-           <img src="img/99d475bf57df5ff9c70b0207d64ed6c38b4c766003b2ec73490595c78ac97eb5._RI_V_TTW_.jpg" class="filme1 hover1">
-           <img src="img/Carros_pôster.jpg"  class="filme2">
-           <img src="img/abelha movie.jpg" class="filme3">
-           <img src="img/vida de inseito.webp" class="filme4">
-           <img src="img/sherek.jpg" class="filme5">
-           <img src="img/madagascar.webp" class="filme6">
-           <img src="img/kung fu panda.webp" class="filme7">
-           <img src="img/seefood.jpg">
-           <img src="img/blog-rango-poster.jpg" class="filme9">
-           <img src="img/como treinar seu dragao.jfif" class="filme10">
-           <img src="img/novos-filmes-que-eu-mal-posso-esperar-para-ver-esse-ano-avatar-the-way-of-the-water-20220908180112.webp" class="filme11">
-           <img src="img/terrifier.jpg" class="filme12">
-           <img src="img/shazam-furia.jpg" class="filme13">
-           <img src="img/john-wick-4-baba-yaga.jpg" class="filme14">
-           <img src="img/panici6.jpg" class="filme15">
-           <img src="img/11029_medio.jpg" class="filme16">
-           <img src="img/14794_medio.jpg mario bross.jpg" class="filme17">
-           <img src="img/images.jfif fvg.jfif" class="filme18">
-           <img src="img/images.jfif coringa.jfif" class="filme19">
-           <img src="img/o-grande-mauricinho-filme-2023-capa-693x1024.jpg" >
-       </div>
-   </div>
-        <h1 class="h11"> Series empolgantes  </h1>
-        <div class="series2">
-            <img src="img/serie 1.avif"class="series1 hover3">
-            <img src="img/serie 2.webp"class="series2 hover2">
-            <img src="img/serie 3.jpg"class="series3 hover1"> 
-            <img src="img/serie 4.jpg"class="series4 hover4">
-            <img src="img/serie 5.jpg"class="series5 hover5">
-            <img src="img/serie 6.jpg"class="series6 hover6">
-            <img src="img/serie 7.jpg"class="series7 hover7">
-            <img src="img/serie 8.jpg"class="series8 hover8">
-            <img src="img/serie 9.jpg" class="series9 hover9">
-            <img src="img/serie 10.jpg"class="series10 hover10">
-            <img src="img/serie 11.jpg"class="series11 hover11">
-            <img src="img/serie 12.jpe" class="anime4 " >
-            <img src="img/serie 12.webp" class="anime6 ">
-            <img src="img/serie 13.jpg"class="series13 hover13 ">
+        <div class="filmes2">
+            <img src="img/99d475bf57df5ff9c70b0207d64ed6c38b4c766003b2ec73490595c78ac97eb5._RI_V_TTW_.jpg"
+                class="filme1 hover1">
+            <img src="img/Carros_pôster.jpg" class="filme2">
+            <img src="img/abelha movie.jpg" class="filme3">
+            <img src="img/vida de inseito.webp" class="filme4">
+            <img src="img/sherek.jpg" class="filme5">
+            <img src="img/madagascar.webp" class="filme6">
+            <img src="img/kung fu panda.webp" class="filme7">
+            <img src="img/seefood.jpg">
+            <img src="img/blog-rango-poster.jpg" class="filme9">
+            <img src="img/como treinar seu dragao.jfif" class="filme10">
+            <img src="img/novos-filmes-que-eu-mal-posso-esperar-para-ver-esse-ano-avatar-the-way-of-the-water-20220908180112.webp"
+                class="filme11">
+            <img src="img/terrifier.jpg" class="filme12">
+            <img src="img/shazam-furia.jpg" class="filme13">
+            <img src="img/john-wick-4-baba-yaga.jpg" class="filme14">
+            <img src="img/panici6.jpg" class="filme15">
+            <img src="img/11029_medio.jpg" class="filme16">
+            <img src="img/14794_medio.jpg mario bross.jpg" class="filme17">
+            <img src="img/images.jfif fvg.jfif" class="filme18">
+            <img src="img/images.jfif coringa.jfif" class="filme19">
+            <img src="img/o-grande-mauricinho-filme-2023-capa-693x1024.jpg">
         </div>
-        <div class="desuaopiniao">
-            <a  href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
-        </div>
+    </div>
+    <h1 class="h11"> Series empolgantes </h1>
+    <div class="series2">
+        <img src="img/serie 1.avif" class="series1 hover3">
+        <img src="img/serie 2.webp" class="series2 hover2">
+        <img src="img/serie 3.jpg" class="series3 hover1">
+        <img src="img/serie 4.jpg" class="series4 hover4">
+        <img src="img/serie 5.jpg" class="series5 hover5">
+        <img src="img/serie 6.jpg" class="series6 hover6">
+        <img src="img/serie 7.jpg" class="series7 hover7">
+        <img src="img/serie 8.jpg" class="series8 hover8">
+        <img src="img/serie 9.jpg" class="series9 hover9">
+        <img src="img/serie 10.jpg" class="series10 hover10">
+        <img src="img/serie 11.jpg" class="series11 hover11">
+        <img src="img/serie 12.jpe" class="anime4 ">
+        <img src="img/serie 12.webp" class="anime6 ">
+        <img src="img/serie 13.jpg" class="series13 hover13 ">
+    </div>
+    <div class="desuaopiniao">
+        <a href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
+    </div>
 
 
 
@@ -131,4 +133,5 @@
 
 
 </body>
+
 </html>
