--- a/filme.html
+++ b/filme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/filme.css">
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
 </head>
+
 <body>
     <header class="cabecalho">
         <img src="img/logo imagem.png">
@@ -24,53 +26,55 @@
     </header>
     <div class="filmes">
         <h1> Filmes populares </h1>
-       <div class="filmes2">
-        <img src="img/99d475bf57df5ff9c70b0207d64ed6c38b4c766003b2ec73490595c78ac97eb5._RI_V_TTW_.jpg" class="filme1 hover1">
-        <img src="img/Carros_pôster.jpg"  class="filme2">
-        <img src="img/abelha movie.jpg" class="filme3">
-        <img src="img/vida de inseito.webp" class="filme4">
-        <img src="img/sherek.jpg" class="filme5">
-        <img src="img/madagascar.webp" class="filme6">
-        <img src="img/kung fu panda.webp" class="filme7">
-        <img src="img/seefood.jpg">
-        <img src="img/blog-rango-poster.jpg" class="filme9">
-        <img src="img/como treinar seu dragao.jfif" class="filme10">
-        <img src="img/novos-filmes-que-eu-mal-posso-esperar-para-ver-esse-ano-avatar-the-way-of-the-water-20220908180112.webp" class="filme11">
-        <img src="img/terrifier.jpg" class="filme12">
-        <img src="img/shazam-furia.jpg" class="filme13">
-        <img src="img/john-wick-4-baba-yaga.jpg" class="filme14">
-        <img src="img/panici6.jpg" class="filme15">
-        <img src="img/11029_medio.jpg" class="filme16">
-        <img src="img/14794_medio.jpg mario bross.jpg" class="filme17">
-        <img src="img/images.jfif fvg.jfif" class="filme18">
-        <img src="img/images.jfif coringa.jfif" class="filme19">
-        <img src="img/o-grande-mauricinho-filme-2023-capa-693x1024.jpg" >
-   </div>
-   <div class="filmesparafamiliatoda">
-    <h1> Filmes para toda familia  </h1>
-   <div class="filmes3">
-       <img src="img/familia toda 1.jpg">
-       <img src="img/familia toda 2.jfif">
-       <img src="img/familia toda 3.webp">
-       <img src="img/familia toda 4.jpg">
-       <img src="img/familia toda 5.jfif">
-       <img src="img/familia toda 6.jfif">
-       <img src="img/familia toda 7.jpg">
-       <img src="img/familia toda 8.jpg">
-       <img src="img/anime 9.jpg">
-       <img src="img/familia toda 10.jpg">
-       <img src="img/familia toda 11.jfif">
-       <img src="img/familia toda 12.jpg">
-       <img src="img/familia toda 13.jpg">
-       <img src="img/familia toda 14.jfif">
-       <img src="img/familia toda 15.jfif">
-       <img src="img/familia toda 16.jpg">
-       <img src="img/familia toda 17.webp">
-   </div>
-</div>
-<div class="desuaopiniao">
-    <a  href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
-</div>
+        <div class="filmes2">
+            <img src="img/99d475bf57df5ff9c70b0207d64ed6c38b4c766003b2ec73490595c78ac97eb5._RI_V_TTW_.jpg"
+                class="filme1 hover1">
+            <img src="img/Carros_pôster.jpg" class="filme2">
+            <img src="img/abelha movie.jpg" class="filme3">
+            <img src="img/vida de inseito.webp" class="filme4">
+            <img src="img/sherek.jpg" class="filme5">
+            <img src="img/madagascar.webp" class="filme6">
+            <img src="img/kung fu panda.webp" class="filme7">
+            <img src="img/seefood.jpg">
+            <img src="img/blog-rango-poster.jpg" class="filme9">
+            <img src="img/como treinar seu dragao.jfif" class="filme10">
+            <img src="img/novos-filmes-que-eu-mal-posso-esperar-para-ver-esse-ano-avatar-the-way-of-the-water-20220908180112.webp"
+                class="filme11">
+            <img src="img/terrifier.jpg" class="filme12">
+            <img src="img/shazam-furia.jpg" class="filme13">
+            <img src="img/john-wick-4-baba-yaga.jpg" class="filme14">
+            <img src="img/panici6.jpg" class="filme15">
+            <img src="img/11029_medio.jpg" class="filme16">
+            <img src="img/14794_medio.jpg mario bross.jpg" class="filme17">
+            <img src="img/images.jfif fvg.jfif" class="filme18">
+            <img src="img/images.jfif coringa.jfif" class="filme19">
+            <img src="img/o-grande-mauricinho-filme-2023-capa-693x1024.jpg">
+        </div>
+        <div class="filmesparafamiliatoda">
+            <h1> Filmes para toda familia </h1>
+            <div class="filmes3">
+                <img src="img/familia toda 1.jpg">
+                <img src="img/familia toda 2.jfif">
+                <img src="img/familia toda 3.webp">
+                <img src="img/familia toda 4.jpg">
+                <img src="img/familia toda 5.jfif">
+                <img src="img/familia toda 6.jfif">
+                <img src="img/familia toda 7.jpg">
+                <img src="img/familia toda 8.jpg">
+                <img src="img/anime 9.jpg">
+                <img src="img/familia toda 10.jpg">
+                <img src="img/familia toda 11.jfif">
+                <img src="img/familia toda 12.jpg">
+                <img src="img/familia toda 13.jpg">
+                <img src="img/familia toda 14.jfif">
+                <img src="img/familia toda 15.jfif">
+                <img src="img/familia toda 16.jpg">
+                <img src="img/familia toda 17.webp">
+            </div>
+        </div>
+        <div class="desuaopiniao">
+            <a href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
+        </div>
 
 
 
@@ -80,4 +84,5 @@
 
 
 </body>
+
 </html>
