--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,105 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarGeek</title>
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/inicio.css">
 
 </head>
 
 <body>
-    <header class="cabecalho">
-        <img src="img/logo imagem.png">
-        <nav>
-            <ul class="menu">
-                <li> <a href="filme.html"> filme </a> </li>
-                <li> <a href="animes.html"> animes </a> </li>
-                <li> <a href="series.html"> series </a> </li>
-                <li> <a href="jogos.html"> jogos </a> </li>
-                <li><a href="pesquisar.html" class="botao1"> Pesquisar </a> </li>
-                <li> <a href="inicio.html" class="botao2"> sair </a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="filmes">
-        <h1> Filmes </h1>
-        <div class="filmes2">
-            <img src="img/99d475bf57df5ff9c70b0207d64ed6c38b4c766003b2ec73490595c78ac97eb5._RI_V_TTW_.jpg"
-                class="filme1 hover1">
-            <img src="img/Carros_pôster.jpg" class="filme2">
-            <img src="img/abelha movie.jpg" class="filme3">
-            <img src="img/vida de inseito.webp" class="filme4">
-            <img src="img/sherek.jpg" class="filme5">
-            <img src="img/madagascar.webp" class="filme6">
-            <img src="img/kung fu panda.webp" class="filme7">
-            <img src="img/seefood.jpg">
-            <img src="img/blog-rango-poster.jpg" class="filme9">
-            <img src="img/como treinar seu dragao.jfif" class="filme10">
-            <img src="img/novos-filmes-que-eu-mal-posso-esperar-para-ver-esse-ano-avatar-the-way-of-the-water-20220908180112.webp"
-                class="filme11">
-            <img src="img/terrifier.jpg" class="filme12">
-            <img src="img/shazam-furia.jpg" class="filme13">
-            <img src="img/john-wick-4-baba-yaga.jpg" class="filme14">
-            <img src="img/panici6.jpg" class="filme15">
-            <img src="img/11029_medio.jpg" class="filme16">
-            <img src="img/14794_medio.jpg mario bross.jpg" class="filme17">
-            <img src="img/images.jfif fvg.jfif" class="filme18">
-            <img src="img/images.jfif coringa.jfif" class="filme19">
-            <img src="img/o-grande-mauricinho-filme-2023-capa-693x1024.jpg">
+    <main>
+        <div class="Container">
+            <img src="img/inicio imagem agrupda.png">
         </div>
-    </div>
 
-    <div class="animes">
-        <h1> Animes </h1>
-        <div class="animes2">
-            <img src="img/anime.jpg" class="anime1">
-            <img src="img/anime2.jpg" class="anime2">
-            <img src="img/anime 3.jpg" class="anime3">
-            <img src="img/anime 4.jpg" class="anime4">
-            <img src="img/anime 5.jpg" class="anime5">
-            <img src="img/anime 6.jpg" class="anime6">
-            <img src="img/anime 7.jpg" class="anime7">
-            <img src="img/anime 8.jpg" class="anime8">
-            <img src="img/anime 9.jpg" class="anime9">
-            <img src="img/anime 10.jpg" class="anime10">
-            <img src="img/anime 11.jpg" class="anime11">
-            <img src="img/anime 12.jpg" class="anime12">
-            <img src="img/anime 13.jpg" class="anime13">
-            <img src="img/anime 14.jpg" class="anime14">
-            <img src="img/anime 15.jpg" class="anime15">
-            <img src="img/anime 16.jpg" class="anime16">
-            <img src="img/anime 17.jpg" class="anime17">
-            <img src="img/anime 18.jpg" class="anime18">
-            <img src="img/anime 19.jpg" class="anime19">
-            <img src="img/anime 20.jpg" class="anime10">
+        <div class="rolagem2">
+            <h1> Seu lugar para filmes </h1>
+            <img src="img/gif-animados-do-gato-de-botas-24.gif" class="gif-animado">
+            <h1> Jogos </h1>
+            <img src="img/kratos-heart.gif">
+            <h1> E muito mais...</h1>
+            <img src="img/download.jfif" class="img">
+            <br>
+            <br>
+            <br>
+            <a href="login.html" class="botao1"> Continuar </a>
         </div>
-    </div>
-
-    <div class="desuaopiniao">
-        <a href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </main>
 
 
 
