de novo projeto

--- a/cadastro.html
+++ b/cadastro.html
@@ -35,7 +35,7 @@
                     <input class="input" type="text" placeholder="CPF">
                 </div>  
                 <div class="botao2">
-                    <a href="index.html" class="botao"> Cadastrar </a>
+                    <a href="filme.html" class="botao"> Cadastrar </a>
                 </div>
                 
             </div>
