--- a/inicio1.html
+++ b/inicio1.html
@@ -21,7 +21,7 @@
                 <li> <a href="series.html"> series </a> </li>
                 <li> <a href="jogos.html"> jogos </a> </li>
                 <li><a href="pesquisar.html" class="botao1"> Pesquisar </a> </li>
-                <li> <a href="inicio.html" class="botao2"> sair </a></li>
+                <li> <a href="inicio1.html" class="botao2"> sair </a></li>
             </ul>
         </nav>
     </header>
