--- a/animes.html
+++ b/animes.html
@@ -20,7 +20,7 @@
                 <li> <a href="series.html"> series </a> </li>
                 <li> <a href="jogos.html"> jogos </a> </li>
                 <li><a href="#" class="botao1"> Pesquisar </a> </li>
-                <li> <a href="inicio.html" class="botao2"> sair </a></li>
+                <li> <a href="index.html" class="botao2"> sair </a></li>
             </ul>
         </nav>
     </header>
