novo projeto javao

--- a/animes.html
+++ b/animes.html
@@ -74,6 +74,11 @@
             <img src="img/anime 20.jpg">
         </div>
     </div>
+    <h1> adicione seus animes incriveis</h1>
+    <div class="animes2" id="listaAnimes">
+
+
+    </div>
     <div class="desuaopiniao">
         <a href="cadastrodemidia.html" class="botaodeopiniao"> Nós de sua opinião </a>
     </div>
