--- a/cadastrodemidia.html
+++ b/cadastrodemidia.html
@@ -10,6 +10,7 @@
 </head>
 <body onload="mostrarCadastro()">
     <header class="cabecalho">
+        <img src="img/logo imagem.png">
     </header>
     <form>
             <div class="div">
